--- a/package.json
+++ b/package.json
@@ -7,12 +7,31 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "ui": "npx --yes ui-thing@latest add",
+    "theme": "npx ui-thing@latest theme",
+    "shortcut": "npx ui-thing@latest shortcuts"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.10.4",
+    "@vueuse/math": "^10.7.1",
+    "@vueuse/nuxt": "^10.7.1",
     "nuxt": "^3.9.0",
+    "nuxt-icon": "^0.6.8",
+    "nuxt-lucide-icons": "^1.0.3",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3",
     "vue": "^3.4.6",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/types": "^2.17.2",
+    "date-fns": "^3.2.0",
+    "radix-vue": "^1.3.0",
+    "tailwind-variants": "^0.1.20"
   }
 }
