--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   },
   "dependencies": {
     "@nuxt/types": "^2.17.2",
+    "@vee-validate/nuxt": "^4.12.4",
+    "@vee-validate/zod": "^4.12.4",
     "radix-vue": "^1.3.0",
-    "tailwind-variants": "^0.1.20"
+    "tailwind-variants": "^0.1.20",
+    "zod": "^3.22.4"
   }
 }
