--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vee-validate/nuxt": "^4.12.4",
     "@vee-validate/zod": "^4.12.4",
     "radix-vue": "^1.3.0",
+    "socket.io-client": "^4.7.4",
     "tailwind-variants": "^0.1.20",
     "zod": "^3.22.4"
   }
