--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@nuxt/types": "^2.17.2",
+    "@nuxtjs/cloudinary": "^2.5.2",
     "@vee-validate/nuxt": "^4.12.4",
     "@vee-validate/zod": "^4.12.4",
     "radix-vue": "^1.3.0",
