--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,27 @@
 {
+    "version": 2,
     "rewrites": [
         {
             "source": "/(.*)",
             "destination": "/"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Credentials": "true"
+            }
         }
     ]
 }
