--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.10.4",
+    "@vite-pwa/nuxt": "^0.8.0",
     "@vueuse/math": "^10.7.1",
     "@vueuse/nuxt": "^10.7.1",
     "nuxt": "^3.9.0",
@@ -34,9 +35,12 @@
     "@nuxtjs/cloudinary": "^2.5.2",
     "@vee-validate/nuxt": "^4.12.4",
     "@vee-validate/zod": "^4.12.4",
+    "firebase": "^10.12.2",
+    "nuxt-vuefire": "^1.0.2",
     "radix-vue": "^1.3.0",
     "socket.io-client": "^4.7.4",
     "tailwind-variants": "^0.1.20",
+    "vuefire": "^3.1.23",
     "zod": "^3.22.4"
   }
 }
