--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "nuxt prepare",
     "ui": "npx --yes ui-thing@latest add",
     "theme": "npx ui-thing@latest theme",
-    "shortcut": "npx ui-thing@latest shortcuts"
+    "shortcut": "npx ui-thing@latest shortcuts",
+    "gen-icon": "npx pwa-assets-generator --preset minimal-2023 public/logo.svg"
   },
   "devDependencies": {
     "@dargmuesli/nuxt-cookie-control": "^7.2.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.10.4",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "@vite-pwa/nuxt": "^0.8.0",
     "@vueuse/math": "^10.7.1",
     "@vueuse/nuxt": "^10.7.1",
